--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,6 @@
-{% block title %}Users{% endblock %}
+{% extends 'base.html' %}
+
+{% block title %}{% endblock %}
 
 {% block body %}
 <h1>Users</h1>
