adjusting form submission and route info

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,5 +9,6 @@
     <li><a href='/{{user.id}}'>{{user.first_name}} {{user.last_name}}</a></li>
     {% endfor %}
 </ul>
+<a href='/new'>Add New User</a>
     
 {% endblock %}
