--- a/templates/user_details.html
+++ b/templates/user_details.html
@@ -7,5 +7,16 @@
 <h1>{{user.first_name}} {{user.last_name}}</h1>
 <img src={{user.img_url}}>
 <br>
+
+<form>
+    <button formaction="/{{ user.id }}/edit"
+            formmethod="GET">Edit
+    </button>
+    <button formaction="/{{ user.id }}/delete"
+            formmethod="POST">Delete
+    </button>
+  </form>
+
+<br>
 <a href='/'>All Users</a>
 {% endblock %}
