--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -3,6 +3,25 @@
 {% block title %}Edit User{% endblock %}
 
 {% block body %}
+<h1>Edit User</h1>
+    <form method='POST'>
+        <div>
+            <labeL for='first_name'>First Name</labeL>
+            <input type='text' name='first_name' placeholder='Enter a first name' min='1' max='30' value="{{ user.first_name }}'">
+        </div>
+        <br>
+        <div>
+            <labeL for='last_name'>Last Name</labeL>
+            <input type='text' name='last_name' placeholder='Enter a last name' min='1' max='30' value="{{ user.last_name }}">
+        </div>
+        <br>
+        <div>
+            <labeL for='img_url'>Image URL</labeL>
+            <input type='text' name='img_url' placeholder='Provide an image of this user' value="{{ user.image_url }}">
+        </div>
+        <a href='/'><button type='submit'>Cancel</button></a>
+        <a href='/create'><button type='submit'>Save</button></a>
+    </form>
 
     
 {% endblock %}
