--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -11,7 +11,7 @@
         </div>
         <br>
         <div>
-            <labeL for='last_name'>Last Name</labeL>
+            <label for='last_name'>Last Name</label>
             <input type='text' name='last_name' placeholder='Enter a last name' min='1' max='30' value="{{ user.last_name }}">
         </div>
         <br>
