renaming and refactoring routes to simplify application

--- a/templates/users/index.html
+++ b/templates/users/index.html
@@ -6,9 +6,9 @@
 <h1>Users</h1>
 <ul>
     {% for user in users %}
-    <li><a href='/{{user.id}}'>{{user.first_name}} {{user.last_name}}</a></li>
+    <li><a href='/users/{{user.id}}'>{{user.first_name}} {{user.last_name}}</a></li>
     {% endfor %}
 </ul>
-<a href='/new'>Add New User</a>
+<a href='/users/new'>Add New User</a>
     
 {% endblock %}
