--- a/templates/users/edit.html
+++ b/templates/users/edit.html
@@ -19,8 +19,8 @@
             <labeL for='img_url'>Image URL</labeL>
             <input type='text' name='img_url' placeholder='Provide an image of this user' value="{{ user.image_url }}">
         </div>
-        <a href='/'><button type='submit'>Cancel</button></a>
-        <a href='/create'><button type='submit'>Save</button></a>
+        <a href='/users'><button type='submit'>Cancel</button></a>
+        <button type='submit'>Save</button>
     </form>
 
     
