refactoring forms to match routes

--- a/templates/posts/new.html
+++ b/templates/posts/new.html
@@ -12,7 +12,7 @@
         <br>
         <div>
             <label for='content'>Content</label>
-            <textarea type='text' name='content' min='1'>
+            <textarea type='text' name='content' min='1'></textarea>
         </div>
         <br>
         <a href='/'><button type='submit'>Cancel</button></a>
