--- a/templates/posts/show.html
+++ b/templates/posts/show.html
@@ -8,6 +8,11 @@
 <h1>{{post.title}}</h1>
     <p>{{post.content}}</p>
     <p><i>By {{post.user.full_name}} on {{post.friendly_date}}</i></p>
+    <p><b>Tags:</b>
+    {% for tag in post.tags %}
+    <button><a href='/tags/{{tag.id}}'>{{tag.name}}</a></button>
+    {% endfor %}
+    </p>
 <form>
     <button formaction='/posts/{{post.id}}/edit' formmethod='GET'>Edit Post</button>
     <button formaction='/posts/{{post.id}}/delete' formmethod='POST'>Delete Post</button>
