--- a/templates/tags/show.html
+++ b/templates/tags/show.html
@@ -13,7 +13,9 @@
     </ul>    
 
 <form>
-    <button formaction='/tags/new' formmethod='GET'>Add Tag</button>
+    <button formaction='/tags/{{tag.id}}/edit' formmethod='GET'>Edit</button>
+    <button formaction='/tags/{{tag.id}}/delete' formmethod='POST'>Delete</button>
+    <br>
     <button formaction='/tags' formmethod='GET'>All Tags</button>
     
 </form> 
